hotfix: env changed

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,10 @@ concurrency: ${{ github.workflow }}-${{ github.ref_name }}
 env:
   REPO: ${{ github.repository }}
   REGISTRY: ghcr.io
-  IMAGE_TITLE: ${{ github.event.repository.name }}
-  IMAGE_NAME: ghcr.io/${{ github.repository }}
+  IMAGE_NAME:
+  IMAGE_TITLE:
   BUILDTIME:
-  VERSION: ${{ github.ref_name }}
+  VERSION:
   PORT: 1000
 
 jobs:
@@ -44,14 +44,15 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.REPO }}
 
       - name: Set tags as environment variable
-        run: |
-          echo "IMAGE_NAME=${{ fromJSON(steps.meta.outputs.json).tags[0] }}" >> $GITHUB_ENV
-          echo "IMAGE_TITLE=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.title'] }}" >> $GITHUB_ENV
-          echo "BUILDTIME=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}" >> $GITHUB_ENV
-          echo "VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_ENV
+        run: echo "Setting metadata to env variables"
+        env:
+          IMAGE_NAME: ${{ fromJSON(steps.meta.outputs.json).tags[0] }}
+          IMAGE_TITLE: ${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.title'] }}
+          BUILDTIME: ${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}
+          VERSION: ${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
 
       - name: Build and push Docker image
         id: push
