--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "^20.14.0"
+    "node": "^20.15.0"
   },
   "license": "LGPL-3.0-or-later",
   "scripts": {
@@ -21,42 +21,41 @@
     "start": "node .output/server/index.mjs",
     "tunnel": "npx untun tunnel --port 3000  http://localhost:3000",
     "clean": "nuxt cleanup",
-    "docker:build": "docker build --build-arg VERSION_TAG=1.11.2 -t portfolio-shirsendu:v1.11.2 .",
+    "docker:build": "docker build --build-arg VERSION_TAG=v1.11.2 -t portfolio-shirsendu:v1.11.2 .",
     "docker:start": "docker run --detach --name portfolio-shirsendu --env-file .env.prod -p 1000:3000 ghcr.io/algostract/portfolio-shirsendu:latest"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
-    "@nuxt/fonts": "^0.7.1",
-    "@nuxt/image": "^1.7.0",
-    "@nuxtjs/color-mode": "^3.4.2",
-    "@nuxtjs/seo": "^2.0.0-rc.11",
-    "@nuxtjs/tailwindcss": "^6.12.0",
     "@splidejs/splide-extension-grid": "^0.4.1",
-    "@vite-pwa/nuxt": "^0.9.1",
     "@vitejs/plugin-vue": "^5.0.5",
-    "@vue-email/components": "^0.0.19",
-    "@vue-email/render": "^0.0.9",
-    "@vueuse/nuxt": "^10.11.0",
     "confbox": "^0.1.7",
     "date-fns": "^3.6.0",
     "nodemailer": "^6.9.14",
-    "nuxt-gtag": "^2.0.6",
-    "nuxt-icons": "^3.2.1",
-    "nuxt-splide": "^1.1.1",
-    "vee-validate": "^4.13.2",
-    "vue": "^3.4.31",
-    "vue-router": "^4.4.0"
+    "vee-validate": "^4.13.2"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.7",
     "@nuxt/eslint": "^0.3.13",
+    "@nuxt/fonts": "^0.7.1",
+    "@nuxt/image": "^1.7.0",
     "@nuxt/test-utils": "^3.13.1",
-    "@types/node": "^20.14.10",
+    "@nuxtjs/color-mode": "^3.4.2",
+    "@nuxtjs/seo": "^2.0.0-rc.16",
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@types/node": "^20.14.11",
     "@types/nodemailer": "^6.4.15",
+    "@vite-pwa/nuxt": "^0.9.1",
+    "@vue-email/components": "^0.0.19",
+    "@vue-email/render": "^0.0.9",
+    "@vueuse/nuxt": "^10.11.0",
     "eslint-config-prettier": "^9.1.0",
-    "nuxt": "^3.12.3",
-    "prettier": "^3.3.2",
+    "nuxt": "^3.12.4",
+    "nuxt-gtag": "^2.0.7",
+    "nuxt-icons": "^3.2.1",
+    "nuxt-splide": "^1.1.1",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "untun": "^0.1.3"
+    "untun": "^0.1.3",
+    "vue": "latest"
   }
 }
