--- a/package.json
+++ b/package.json
@@ -21,28 +21,29 @@
     "start": "node .output/server/index.mjs",
     "tunnel": "npx untun tunnel --port 3000  http://localhost:3000",
     "clean": "nuxt cleanup",
-    "docker:build": "docker build --build-arg VERSION_TAG=v1.11.2 -t portfolio-shirsendu:v1.11.2 .",
-    "docker:start": "docker run --detach --name portfolio-shirsendu --env-file .env.prod -p 1000:3000 ghcr.io/algostract/portfolio-shirsendu:latest"
+    "docker:build": "docker build --build-arg VERSION_TAG=dev -t portfolio-shirsendu:dev .",
+    "docker:start": "docker run --detach --name portfolio-shirsendu --env-file .env.prod -p 1000:3000 portfolio-shirsendu:dev"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
     "@splidejs/splide-extension-grid": "^0.4.1",
-    "@vitejs/plugin-vue": "^5.0.5",
+    "@vitejs/plugin-vue": "^5.1.2",
     "confbox": "^0.1.7",
     "date-fns": "^3.6.0",
     "nodemailer": "^6.9.14",
-    "vee-validate": "^4.13.2"
+    "vee-validate": "^4.13.2",
+    "vue": "latest"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.7",
-    "@nuxt/eslint": "^0.3.13",
+    "@nuxt/eslint": "^0.4.0",
     "@nuxt/fonts": "^0.7.1",
     "@nuxt/image": "^1.7.0",
-    "@nuxt/test-utils": "^3.13.1",
+    "@nuxt/test-utils": "^3.14.0",
     "@nuxtjs/color-mode": "^3.4.2",
     "@nuxtjs/seo": "^2.0.0-rc.16",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@types/node": "^20.14.11",
+    "@types/node": "^22.1.0",
     "@types/nodemailer": "^6.4.15",
     "@vite-pwa/nuxt": "^0.9.1",
     "@vue-email/components": "^0.0.19",
@@ -50,12 +51,11 @@
     "@vueuse/nuxt": "^10.11.0",
     "eslint-config-prettier": "^9.1.0",
     "nuxt": "^3.12.4",
-    "nuxt-gtag": "^2.0.7",
+    "nuxt-gtag": "^2.1.0",
     "nuxt-icons": "^3.2.1",
     "nuxt-splide": "^1.1.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "untun": "^0.1.3",
-    "vue": "latest"
+    "untun": "^0.1.3"
   }
 }
