--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "start": "node .output/server/index.mjs",
-    "tunnel": "npx untun tunnel --port 3000  http://localhost:3000",
+    "tunnel": "untun tunnel --port 3000  http://localhost:3000",
     "clean": "nuxt cleanup",
     "docker:build": "docker build --build-arg VERSION_TAG=dev -t portfolio-shirsendu:dev .",
     "docker:start": "docker run --detach --name portfolio-shirsendu --env-file .env.prod -p 1000:3000 portfolio-shirsendu:dev"
