--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NITRO_PRESET=node-cluster
-NUXT_PUBLIC_GTAG_ID=
+NUXT_PUBLIC_SCRIPTS_GOOGLE_ANALYTICS_ID=
 NUXT_PRIVATE_ROOT_DIR=
 NUXT_PRIVATE_GMAIL=
 NUXT_PRIVATE_EMAIL_USERNAME=
