--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "license": "LGPL-3.0-or-later",
   "scripts": {
     "postinstall": "nuxt prepare",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --tunnel",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier .  --write",
-    "build": "nuxt build",
+    "build": "nuxt build && cp -r static .output/static",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "start": "node .output/server/index.mjs",
-    "tunnel": "untun tunnel http://localhost:1000",
+    "tunnel": "untun tunnel --port 1000 http://localhost:1000",
     "clean": "nuxt cleanup",
     "docker:build": "docker build --build-arg VERSION_TAG=dev -t portfolio-shirsendu:dev .",
-    "docker:start": "docker run --detach --name portfolio-shirsendu-dev --env-file .env.prod -p 1000:3000 portfolio-shirsendu:dev"
+    "docker:start": "docker run --detach --name portfolio-shirsendu-dev --mount type=bind,source=$(pwd)/static,target=/app/.output/static,readonly --env-file .env.prod -p 1000:3000 portfolio-shirsendu:dev"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
@@ -36,26 +36,26 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.7",
-    "@nuxt/eslint": "^0.4.0",
-    "@nuxt/fonts": "^0.7.1",
+    "@nuxt/eslint": "^0.5.0",
+    "@nuxt/fonts": "^0.7.2",
     "@nuxt/image": "^1.7.0",
     "@nuxt/scripts": "^0.6.6",
-    "@nuxt/test-utils": "^3.14.0",
+    "@nuxt/test-utils": "^3.14.1",
     "@nuxtjs/color-mode": "^3.4.2",
-    "@nuxtjs/seo": "^2.0.0-rc.16",
+    "@nuxtjs/seo": "^2.0.0-rc.18",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@types/node": "^22.1.0",
+    "@types/node": "^22.3.0",
     "@types/nodemailer": "^6.4.15",
     "@vite-pwa/nuxt": "^0.9.1",
     "@vue-email/components": "^0.0.19",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/nuxt": "^10.11.0",
+    "@vueuse/nuxt": "^10.11.1",
     "eslint-config-prettier": "^9.1.0",
     "nuxt": "^3.12.4",
     "nuxt-icons": "^3.2.1",
     "nuxt-splide": "^1.1.1",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "untun": "^0.1.3"
   }
 }
