refactor: nuxt 4 migration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
   // Enable ESlint flat config support
-  "eslint.experimental.useFlatConfig": true,
-  "vetur.validation.template": false
+  "eslint.useFlatConfig": true,
 }
