--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "LGPL-3.0-or-later",
   "scripts": {
     "postinstall": "nuxt prepare",
-    "dev": "nuxt dev --tunnel",
+    "dev": "nuxt dev",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier .  --write",
@@ -41,19 +41,20 @@
     "@nuxt/image": "^1.7.0",
     "@nuxt/scripts": "^0.6.6",
     "@nuxt/test-utils": "^3.14.1",
-    "@nuxtjs/color-mode": "^3.4.2",
+    "@nuxtjs/color-mode": "^3.4.4",
     "@nuxtjs/seo": "^2.0.0-rc.18",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@types/node": "^22.3.0",
+    "@types/node": "^22.4.0",
     "@types/nodemailer": "^6.4.15",
-    "@vite-pwa/nuxt": "^0.9.1",
+    "@vite-pwa/nuxt": "^0.10.0",
     "@vue-email/components": "^0.0.19",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/nuxt": "^10.11.1",
+    "@vueuse/nuxt": "^11.0.0",
     "eslint-config-prettier": "^9.1.0",
     "nuxt": "^3.12.4",
     "nuxt-icons": "^3.2.1",
     "nuxt-splide": "^1.1.1",
+    "nuxt-time": "^0.1.3",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "untun": "^0.1.3"
