--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,7 +83,7 @@ jobs:
             docker ps -a -q --filter ancestor=${{ env.IMAGE_NAME }} | xargs -r docker rm
             docker rmi ${{ env.IMAGE_NAME }}
             docker pull ${{ env.IMAGE_NAME }}
-            docker run --detach --name ${{ env.IMAGE_TITLE }} --mount type=bind,source=$(pwd)/${{ env.IMAGE_TITLE }}/static,target=/app/.output/static,readonly  --env-file ~/${{ env.IMAGE_TITLE }}/.env.prod -p ${{ env.PORT }}:3000 ${{ env.IMAGE_NAME }}
+            docker run --detach --name ${{ env.IMAGE_TITLE }} --mount type=bind,source=$(pwd)/${{ env.IMAGE_TITLE }}/static,target=/app/static,readonly  --env-file ~/${{ env.IMAGE_TITLE }}/.env.prod -p ${{ env.PORT }}:3000 ${{ env.IMAGE_NAME }}
 
   # deploy:
   #   needs: build
