--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "portfolio-shirsendu",
   "description": "Shirsendu's devfolio showcasing his projects, experience and certification in a visually appealing manner",
-  "author": "Shirsendu Bairagi <shirsendu2001@gmail.com>",
   "version": "1.12.1",
+  "author": "Shirsendu Bairagi <shirsendu2001@gmail.com>",
+  "license": "LGPL-3.0-or-later",
   "private": true,
   "type": "module",
   "engines": {
     "node": "^20.15.0"
   },
-  "license": "LGPL-3.0-or-later",
   "scripts": {
     "postinstall": "nuxt prepare",
-    "dev": "nuxt dev",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier .  --write",
+    "dev": "nuxt dev",
     "build": "nuxt build && cp -r static .output/static",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -22,12 +22,12 @@
     "tunnel": "untun tunnel --port 1000 http://localhost:1000",
     "clean": "nuxt cleanup",
     "docker:build": "docker build --build-arg VERSION_TAG=dev -t portfolio-shirsendu:dev .",
-    "docker:start": "docker run --detach --name portfolio-shirsendu-dev --mount type=bind,source=$(pwd)/static,target=/app/.output/static,readonly --env-file .env.prod -p 1000:3000 portfolio-shirsendu:dev"
+    "docker:start": "docker run --detach --name portfolio-shirsendu-dev --mount type=bind,source=$(pwd)/static,target=/app/static,readonly --env-file .env.prod -p 1000:3000 portfolio-shirsendu:dev"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
     "@splidejs/splide-extension-grid": "^0.4.1",
-    "@vitejs/plugin-vue": "^5.1.2",
+    "@vitejs/plugin-vue": "^5.1.3",
     "confbox": "^0.1.7",
     "date-fns": "^3.6.0",
     "nodemailer": "^6.9.14",
@@ -36,20 +36,20 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.7",
-    "@nuxt/eslint": "^0.5.0",
+    "@nuxt/eslint": "^0.5.4",
     "@nuxt/fonts": "^0.7.2",
-    "@nuxt/image": "^1.7.0",
-    "@nuxt/scripts": "^0.6.6",
+    "@nuxt/image": "^1.8.0",
+    "@nuxt/scripts": "^0.8.3",
     "@nuxt/test-utils": "^3.14.1",
     "@nuxtjs/color-mode": "^3.4.4",
-    "@nuxtjs/seo": "^2.0.0-rc.18",
+    "@nuxtjs/seo": "^2.0.0-rc.19",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@types/node": "^22.4.0",
+    "@types/node": "^22.5.1",
     "@types/nodemailer": "^6.4.15",
-    "@vite-pwa/nuxt": "^0.10.0",
+    "@vite-pwa/nuxt": "^0.10.1",
     "@vue-email/components": "^0.0.19",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/nuxt": "^11.0.0",
+    "@vueuse/nuxt": "^11.0.3",
     "eslint-config-prettier": "^9.1.0",
     "nuxt": "^3.12.4",
     "nuxt-icons": "^3.2.1",
