--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NITRO_PRESET=node-server
 NUXT_PUBLIC_API_BASE_URL=
+NUXT_PUBLIC_SCRIPTS_GOOGLE_ANALYTICS_ID=
 NUXT_PUBLIC_SCRIPTS_GOOGLE_TAG_MANAGER_ID=
 NUXT_PRIVATE_GMAIL=
 NUXT_PRIVATE_EMAIL_USERNAME=
