--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "portfolio-shirsendu",
-  "description": "Shirsendu's devfolio showcasing his projects, experience and certification in a visually appealing manner",
   "version": "1.13.0",
+  "description": "Shirsendu's devfolio showcasing his projects, experience and certification in a visually appealing manner",
   "author": "Shirsendu Bairagi <shirsendu2001@gmail.com>",
   "license": "LGPL-3.0-or-later",
-  "private": true,
   "type": "module",
+  "private": true,
+  "volta": {
+    "node": "20.17.0"
+  },
   "engines": {
-    "node": "^20.15.0"
+    "node": "^20.17.0"
   },
   "scripts": {
     "postinstall": "nuxt prepare",
@@ -27,36 +30,37 @@
   "dependencies": {
     "@notionhq/client": "^2.2.15",
     "@splidejs/splide-extension-grid": "^0.4.1",
-    "@vitejs/plugin-vue": "^5.1.3",
+    "@vitejs/plugin-vue": "^5.1.4",
     "confbox": "^0.1.7",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "nodemailer": "^6.9.15",
     "vee-validate": "^4.13.2",
-    "vue": "latest"
+    "vue": "latest",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.8",
     "@nuxt/eslint": "^0.5.7",
-    "@nuxt/fonts": "^0.8.0",
+    "@nuxt/fonts": "^0.9.2",
     "@nuxt/image": "^1.8.0",
-    "@nuxt/scripts": "^0.8.5",
+    "@nuxt/scripts": "^0.9.4",
     "@nuxt/test-utils": "^3.14.2",
-    "@nuxtjs/color-mode": "^3.5.0",
+    "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/seo": "^2.0.0-rc.21",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@types/node": "^22.5.4",
-    "@types/nodemailer": "^6.4.15",
+    "@types/node": "^22.7.4",
+    "@types/nodemailer": "^6.4.16",
     "@vite-pwa/nuxt": "^0.10.5",
     "@vue-email/components": "^0.0.19",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/nuxt": "^11.0.3",
+    "@vueuse/nuxt": "^11.1.0",
     "eslint-config-prettier": "^9.1.0",
-    "nuxt": "^3.13.1",
+    "nuxt": "^3.13.2",
     "nuxt-icons": "^3.2.1",
     "nuxt-splide": "^1.1.1",
-    "nuxt-time": "^0.1.3",
+    "nuxt-time": "^1.0.2",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "untun": "^0.1.3"
   }
 }
