chore: new project unascii added

--- a/static/data/projects.yml
+++ b/static/data/projects.yml
@@ -10,6 +10,7 @@
 #   createdAt: "2020-05-04T18:30:00Z"
 #   appURL: null
 #   videoURL: null
+#   images: null
 
 # - name: Alphanum Vision
 #   repo: shba007/digit-recognizer
@@ -22,6 +23,7 @@
 #   createdAt: "2021-03-31T18:30:00Z"
 #   appURL: null
 #   videoURL: null
+#   images: null
 
 # - name: Ntertainer
 #   repo: shba007/ntertainer
@@ -34,6 +36,7 @@
 #   createdAt: "2021-04-20T18:30:00Z"
 #   appURL: null
 #   videoURL: null
+#   images: null
 
 - name: Unpsy
   repo: shba007/unpsy-app # shba007/psy-omr
@@ -71,6 +74,7 @@
 #   createdAt: "2022-02-10T18:30:00Z"
 #   appURL: "https://blood-bank-manager.netlify.app"
 #   videoURL: null
+#   images: null
 
 # - name: Orykit
 #   repo: shba007/orykit
@@ -84,6 +88,7 @@
 #   createdAt: "2022-03-24T18:30:00Z"
 #   appURL: "https://orykit-store-test.onrender.com"
 #   videoURL: null
+#   images: null
 
 - name: Biosense
   repo: shba007/biosense-web # shba007/biosense-ai shba007/biosense-iot
@@ -121,6 +126,7 @@
 #   createdAt: "2023-06-27T18:30:00Z"
 #   appURL: "https://shba007.github.io/ui-react-podcast/"
 #   videoURL: null
+#   images: null
 
 - name: Shirsendu's Portfolio
   repo: Algostract/portfolio-shirsendu
@@ -155,6 +161,7 @@
 #   createdAt: "2023-07-13T13:33:34Z"
 #   appURL: https://compeer.onrender.com/
 #   videoURL: null
+#   images: null
 
 # - name: Fashion Lens
 #   repo: shba007/fashion-lens
@@ -166,6 +173,7 @@
 #       - nuxt
 #   appURL: null # "https://fashion-lens.shirsendu-bairagi.dev"
 #   videoURL: null
+#   images: null
 
 - name: Magma
   repo: shba007/ui-react-magma
@@ -211,25 +219,27 @@
     - id: d8f402bc-23fd-4db3-842d-844df885cbab
       title: AI Guide Screenshot 3
 
-- name: Framework Logo
-  repo: shba007/framework-logo
+- name: Unstack
+  repo: shba007/unstack
   category: 'npm-package'
   technologies:
     languages:
       - typescript
-    frameworks: []
+    frameworks:
+      - citty
+      - unbuild
   createdAt: '2023-09-11T18:30:00Z'
   appURL: 'https://www.npmjs.com/package/framework-logo/'
   videoURL: null
   images:
     - id: d55143bb-022f-48f2-97c4-abd7ab4cb229
-      title: Framework Logo Screenshot 1
+      title: Unstack Screenshot 1
 
     - id: 890114e4-0eae-4cb7-bd97-8e4760d7dcb1
-      title: Framework Logo Screenshot 2
+      title: Unstack Screenshot 2
 
     - id: 18ff828b-6857-4cc6-9ac6-fd6df839da02
-      title: Framework Logo Screenshot 3
+      title: Unstack Screenshot 3
 
 - name: Plant Lens
   repo: shba007/plant-lens-web # shba007/plant-lens-ai
@@ -310,6 +320,7 @@
 #   createdAt: "2024-03-13T18:30:00Z"
 #   appURL: null
 #   videoURL: null
+#   images: null
 
 - name: Magic Portfolio
   repo: shba007/magic-portfolio
@@ -324,3 +335,22 @@
   appURL: 'https://magic-portfolio.vercel.app'
   videoURL: null
   images: null
+
+- name: Unascii
+  repo: shba007/unascii
+  category: 'npm-package'
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - citty
+      - unbuild
+  createdAt: '2024-09-21T18:30:00Z'
+  appURL: 'https://www.npmjs.com/package/unascii/'
+  videoURL: null
+  images:
+    - id: 49247d31-4c02-413d-b21d-164a23cf42b4
+      title: Unascii Screenshot 1
+
+    - id: 345d82da-35f7-4646-8669-b01df0f3ef1a
+      title: Unascii Screenshot 2
