--- a/.prettierignore
+++ b/.prettierignore
@@ -20,8 +20,11 @@ logs
 .idea
 
 # Local env files
-.env
-.env.*
+.env*
+
+# Tauri
+src-tauri/target/
+src-tauri/gen/schemas
 
 # Static files
 static/**/*.*
