--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
   },
   "scripts": {
     "postinstall": "nuxt prepare",
-    "dev": "nuxt dev",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier .  --write",
+    "dev": "nuxt dev",
     "build": "nuxt build && cp -r static .output/static",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "tauri:dev:mobile": "tauri android dev",
+    "tauri:build:mobile": "tauri android build",
     "start": "node .output/server/index.mjs",
     "tunnel": "untun tunnel --port 3000 http://localhost:3000",
     "clean": "nuxt cleanup",
@@ -30,8 +35,9 @@
   "dependencies": {
     "@notionhq/client": "^2.2.15",
     "@splidejs/splide-extension-grid": "^0.4.1",
+    "@tauri-apps/api": "^2.0.2",
     "@vitejs/plugin-vue": "^5.1.4",
-    "confbox": "^0.1.7",
+    "confbox": "^0.1.8",
     "date-fns": "^4.1.0",
     "nodemailer": "^6.9.15",
     "vee-validate": "^4.13.2",
@@ -41,14 +47,15 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.9",
     "@nuxt/eslint": "^0.5.7",
-    "@nuxt/fonts": "^0.9.2",
+    "@nuxt/fonts": "^0.10.0",
     "@nuxt/image": "^1.8.1",
     "@nuxt/scripts": "^0.9.4",
-    "@nuxt/test-utils": "^3.14.2",
+    "@nuxt/test-utils": "^3.14.3",
     "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/seo": "^2.0.0-rc.23",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@types/node": "^22.7.4",
+    "@tauri-apps/cli": "^2.0.3",
+    "@types/node": "^22.7.5",
     "@types/nodemailer": "^6.4.16",
     "@vite-pwa/nuxt": "^0.10.5",
     "@vue-email/components": "^0.0.19",
