chore: premade sitemap.xml removed, google tag manager removed, icons updated, pkgs updated

--- a/.dockerignore
+++ b/.dockerignore
@@ -25,8 +25,14 @@ logs
 .idea
 
 # Local env files
-.env*
+.env
+.env.*
 
+# Tauri files
+src-tauri/target/
+src-tauri/gen/schemas
+
+# Docker files
 .dockerignore
 Dockerfile
 
