--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   },
   "scripts": {
     "postinstall": "nuxt prepare",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . --fix",
     "format": "prettier .  --write",
     "dev": "nuxt dev",
     "build": "nuxt build && cp -r static .output/static",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate --dotenv .env.prod",
     "preview": "nuxt preview",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
@@ -34,38 +33,40 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
-    "@splidejs/splide-extension-grid": "^0.4.1",
-    "@tauri-apps/api": "^2.0.2",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "confbox": "^0.1.8",
-    "date-fns": "^4.1.0",
-    "nodemailer": "^6.9.15",
-    "vee-validate": "^4.13.2",
-    "vue": "latest",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@changesets/cli": "^2.27.9",
-    "@nuxt/eslint": "^0.5.7",
+    "@nuxt/eslint": "^0.6.0",
     "@nuxt/fonts": "^0.10.0",
     "@nuxt/image": "^1.8.1",
-    "@nuxt/scripts": "^0.9.4",
+    "@nuxt/scripts": "^0.9.5",
     "@nuxt/test-utils": "^3.14.3",
     "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/seo": "^2.0.0-rc.23",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@tauri-apps/cli": "^2.0.3",
-    "@types/node": "^22.7.5",
-    "@types/nodemailer": "^6.4.16",
+    "@splidejs/splide-extension-grid": "^0.4.1",
+    "@tauri-apps/api": "^2.0.2",
     "@vite-pwa/nuxt": "^0.10.5",
+    "@vitejs/plugin-vue": "^5.1.4",
     "@vue-email/components": "^0.0.19",
     "@vue-email/render": "^0.0.9",
     "@vueuse/nuxt": "^11.1.0",
-    "eslint-config-prettier": "^9.1.0",
+    "confbox": "^0.1.8",
+    "date-fns": "^4.1.0",
+    "nodemailer": "^6.9.15",
     "nuxt": "^3.13.2",
     "nuxt-icons": "^3.2.1",
     "nuxt-splide": "^1.1.1",
     "nuxt-time": "^1.0.2",
+    "vee-validate": "^4.13.2",
+    "vue": "latest",
+    "vue-router": "latest",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.27.9",
+    "@tauri-apps/cli": "^2.0.3",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/node": "^22.7.6",
+    "@types/nodemailer": "^6.4.16",
+    "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "untun": "^0.1.3"
