--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -1,5 +1,4 @@
 name: Nuxt CD
-
 run-name: ${{ github.ref_name }}
 
 on:
@@ -17,7 +16,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     permissions:
       contents: read
@@ -32,41 +31,52 @@ jobs:
       version: ${{ steps.info.outputs.version }}
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }} # ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.GITHUB_TOKEN }} # ${{ secrets.REGISTRY_PASSWORD }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: metadata
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.REPO }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Set tags as environment variable
         id: info
         run: |
           echo "Setting metadata to env variables"
-          echo "::set-output name=image_name::${{ fromJSON(steps.metadata.outputs.json).tags[1] }}"
-          echo "::set-output name=image_title::${{ fromJSON(steps.metadata.outputs.json).labels['org.opencontainers.image.title'] }}"
-          echo "::set-output name=buildtime::${{ fromJSON(steps.metadata.outputs.json).labels['org.opencontainers.image.created'] }}"
-          echo "::set-output name=version::${{ fromJSON(steps.metadata.outputs.json).labels['org.opencontainers.image.version'] }}"
+          echo "image_name=${{ fromJSON(steps.metadata.outputs.json).tags[0] }}" >> $GITHUB_OUTPUT
+          echo "image_title=${{ fromJSON(steps.metadata.outputs.json).labels['org.opencontainers.image.title'] }}" >> $GITHUB_OUTPUT
+          echo "buildtime=${{ fromJSON(steps.metadata.outputs.json).labels['org.opencontainers.image.created'] }}" >> $GITHUB_OUTPUT
+          echo "version=${{ fromJSON(steps.metadata.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_OUTPUT
 
       - name: Build and push Docker image
         id: push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
           build-args: |
             BUILDTIME=${{ steps.info.outputs.buildtime }}
             VERSION=${{ steps.info.outputs.version }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
@@ -77,7 +87,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Deploy to VPS
@@ -87,11 +97,24 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           script: |
+            # Stop and remove existing containers
             docker ps -q --filter ancestor=${{ needs.build.outputs.image_name }} | xargs -r docker stop
             docker ps -a -q --filter ancestor=${{ needs.build.outputs.image_name }} | xargs -r docker rm
-            docker rmi ${{ needs.build.outputs.image_name }}
+
+            # Remove old image
+            docker rmi ${{ needs.build.outputs.image_name }} || true
+
+            # Pull new image
             docker pull ${{ needs.build.outputs.image_name }}
-            docker run --detach --name ${{ needs.build.outputs.image_title }} \
+
+            # Create and start new container
+            docker run --detach \
+              --name ${{ needs.build.outputs.image_title }} \
+              --restart unless-stopped \
               --mount type=bind,source=$(pwd)/${{ needs.build.outputs.image_title }}/static,target=/app/static,readonly \
               --env-file ~/${{ needs.build.outputs.image_title }}/.env.prod \
-              -p ${{ env.PORT }}:3000 ${{ needs.build.outputs.image_name }}
+              -p ${{ env.PORT }}:3000 \
+              ${{ needs.build.outputs.image_name }}
+
+            # Clean up unused images
+            docker image prune -f
