--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": "^18.0.0 || ^20.0.0 || ^22.0.0",
     "pnpm": "^9.12.0"
   },
-  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228",
+  "packageManager": "pnpm@9.12.3",
   "scripts": {
     "postinstall": "nuxt prepare",
     "dev": "nuxt dev",
@@ -42,7 +42,7 @@
     "@nuxt/fonts": "^0.10.2",
     "@nuxt/image": "^1.8.1",
     "@nuxt/scripts": "^0.9.5",
-    "@nuxtjs/color-mode": "^3.5.1",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/seo": "^2.0.0-rc.23",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@splidejs/splide-extension-grid": "^0.4.1",
@@ -55,22 +55,22 @@
     "@vueuse/nuxt": "^11.1.0",
     "confbox": "^0.1.8",
     "date-fns": "^4.1.0",
-    "nodemailer": "^6.9.15",
+    "nodemailer": "^6.9.16",
     "nuxt": "^3.13.2",
     "nuxt-icons": "^3.2.1",
     "nuxt-splide": "^1.1.1",
     "nuxt-time": "^1.0.2",
-    "vee-validate": "^4.14.4",
+    "vee-validate": "^4.14.6",
     "vue": "latest",
     "vue-router": "latest",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.9",
-    "@nuxt/eslint": "^0.6.0",
+    "@nuxt/eslint": "^0.6.1",
     "@nuxt/test-utils": "^3.14.4",
     "@tauri-apps/cli": "^2.0.4",
-    "@types/node": "^22.7.9",
+    "@types/node": "^22.8.1",
     "@types/nodemailer": "^6.4.16",
     "cross-env": "^7.0.3",
     "eslint": "^9.13.0",
